fix mkdocs authors file

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -1,7 +1,6 @@
 authors:
   andreashappe:
     name: Andreas Happe
-    description: me
-    avatar: none
-    slug: none
-    url: none
+    description: Creator
+    avatar: https://avatars.githubusercontent.com/u/20667?v=4
+    url: https://github.com/andreashappe
