--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "invoke>=2.2.0",
     "langgraph>=0.2.35",
     "langchain-openai>=0.2.2",
-    "python-dotenv>=1.0.1"
+    "python-dotenv>=1.0.1",
+    "rich>=13.9.2"
 ]
 requires-python = ">= 3.8"
