--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "langgraph>=0.2.35",
     "langchain-openai>=0.2.2",
     "python-dotenv>=1.0.1",
-    "rich>=13.9.2"
+    "rich>=13.9.2",
+    "grandalf>=0.8"
 ]
 requires-python = ">= 3.8"
