authorship, white bg image

--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -4,3 +4,8 @@ authors:
     description: Creator
     avatar: https://avatars.githubusercontent.com/u/20667?v=4
     url: https://github.com/andreashappe
+  brandl:
+    name: Jürgen Brandl
+    description: Co-Creator
+    avatar: https://avatars.githubusercontent.com/u/3877188?v=4
+    url: https://github.com/brandl
