add google analytics

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,3 +31,7 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+extra:
+  analytics:
+    provider: google
+    property: G-XVEVXNXJ44
